test/files/neg/t565.scala
object test {
  var s0: String
}
