test/files/neg/t565.check
t565.scala:1: error: object creation impossible, since variable s0 is not defined
(Note that variables need to be initialized to be defined)
object test {
       ^
one error found
